# FBXNormalDisabler

./: .gitignore  CMakeLists.txt  FBXNormalDisabler.slnx  FBXNormalDisabler.vcxproj  FBXNormalDisabler.vcxproj.filters  FBXNormalDisablerWindow.cs  LICENSE.txt  README.md  dllmain.c  pch.h
ForBlenderAddon/fbx_shape_normal_patch/: __init__.py
ForUnityEditor/: LICENSE.txt
Src/: fbxplugin.c  fbxplugin.h
Src/ufbx/: ufbx.c  ufbx.h
Unity/: FBXNormalDisabler.cs
ufbx/: LICENSE-ufbx  ufbx.c
